# svelte-langserve

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  MIGRATION.md  README.md  TODO.md  TODO_MIGRATION.md  deployment_implementation.txt  docker-bake.hcl  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  frontend.js  frontend_client.js  frontend_server.js  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: config.json
.github/: dependabot.yml
.github/actions/setup-node-pnpm/: action.yml
.github/scripts/: test-ci-locally.sh
.github/workflows/: ci.yml  ci.yml.backup  codeql.yml  docker-bake.yml  release.yml
backend/: README.md  legacy_backend.py
backend/src/claude_dashboard_backend/: app.py  config.py  llm.py
backend/src/claude_dashboard_backend/chains/: data_analyst.py
docs/: README.md
docs/advanced/: architecture.md  troubleshooting.md
docs/getting-started/: quick-start.md  tutorial.md
docs/guides/: authentication-flow.md  authentication.md  deployment.md  internationalization.md  themes.md
docs/reference/: components.md
docs/reference/api/: e2e-testing.md  error-codes.md  fastapi-documentation.md  rest-endpoints.md  socket-events.md  stores.md
examples/dashboard/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.js  package.json  playwright-frontend.config.ts  playwright.config.ts  pnpm-lock.yaml  project.json  tailwind.config.js  vite.config.old.ts.bak  vite.config.ts  vitest-setup-client.ts
examples/dashboard/e2e/: echo-agent-basic.test.ts  full-message-flow.test.ts
examples/dashboard/scripts/: run-e2e-tests.sh  run-e2e-with-services.sh  test-services.js
examples/dashboard/src/: app.d.ts  hooks.server.new.ts  hooks.server.new.ts.bak  hooks.server.old.ts.bak  hooks.server.ts
examples/dashboard/src/lib/: index.ts
examples/dashboard/src/lib/langgraph/: README.md
examples/dashboard/src/lib/langgraph/components/: ErrorBoundary.svelte
examples/dashboard/src/lib/langgraph/types/: index.ts
examples/dashboard/src/lib/langserve/: README.md  index.ts
examples/dashboard/src/lib/langserve/components/: ChatInterface.svelte  ChatInterface.svelte.test.ts  ChatMessage.svelte  ConfigPanel.svelte  ConfigPanel.svelte.test.ts  ConversationList.svelte  ConversationList.svelte.test.ts  EndpointSelector.svelte  EndpointSelector.svelte.test.ts  ErrorBoundary.svelte  LangServeFrontend.svelte  LoginForm.svelte
examples/dashboard/src/lib/langserve/stores/: auth.ts  langserve.ts
examples/dashboard/src/lib/utils/: logger.ts
examples/dashboard/src/routes/: +page.svelte
examples/dashboard/src/routes/flowbite/: +page.svelte
examples/langgraph-backend/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  project.json  pyproject.toml  pyrightconfig.json
examples/langgraph-backend/scripts/: test-echo-agent.py  test-mock-openai.py
examples/langgraph-backend/src/svelte_langgraph/: __init__.py  app.py  assistant_manager.py  auth.py  config.py  database.py  llm.py  memory.py
examples/langgraph-backend/src/svelte_langgraph/chains/: __init__.py  chatbot.py  creative_writer.py  data_analyst.py  test_echo.py
examples/langgraph-backend/src/svelte_langgraph/graphs/: __init__.py  chatbot_graph.py  code_assistant_graph.py  creative_writer_graph.py  data_analyst_graph.py  research_assistant_graph.py  test_echo_graph.py
examples/langgraph-backend/src/svelte_langgraph/testing/: __init__.py  mock_llm.py
examples/langgraph-backend/tests/: __init__.py  conftest.py  test_api_documentation.py  test_app.py  test_auth.py  test_auth_unit.py  test_rest_endpoints.py
examples/langserve-backend/: Dockerfile  legacy_backend.py  main.py  project.json  pyproject.toml  pyrightconfig.json
examples/langserve-backend/src/claude_dashboard_backend/: __init__.py  app.py  config.py  llm.py  main.py  memory.py
examples/langserve-backend/src/claude_dashboard_backend/chains/: __init__.py  chatbot.py  code_assistant.py  creative_writer.py  data_analyst.py  research_assistant.py
examples/langserve-backend/src/svelte_langserve/: auth.py  config.py  main.py  memory.py
examples/langserve-backend/src/svelte_langserve/chains/: code_assistant.py  research_assistant.py
examples/langserve-backend/tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_auth_unit.py
frontend/src/lib/langserve/components/: ChatInterface.svelte  ConversationList.svelte  LangServeFrontend.svelte
frontend/src/lib/langserve/stores/: langserve.ts
frontend/src/routes/: +page.svelte
nginx/: nginx.conf
(+12 files in other folders)
