[project]
name = "svelte-langgraph-backend"
version = "0.1.0"
description = "LangGraph backend for Claude dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langgraph",
    "langgraph-cli",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-community",
    "langchain",
    "tavily-python",
    "psycopg2-binary",
    "redis",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "duckduckgo-search"
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pyright",
    "httpx"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "*.py"]
exclude = ["**/__pycache__"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    "**/*.ts",
    "**/*.js", 
    "**/*.svelte",
    "node_modules",
    "**/__pycache__",
    ".git"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
# Enable import sorting within ruff formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
    "ignore::pydantic.warnings.PydanticDeprecatedSince211"
]

[tool.hatch.build.targets.wheel]
packages = ["src/svelte_langgraph"]

